# My-Agent

./: .gitignore  Cargo.toml  install.sh
.github/workflows/: ci.yml  release.yml
docs/: AGENT_ASSISTANT_ORG_SETUP.md  HTTPS_PHONE_GUIDE.md  HTTPS_SETUP.md  MOBILE_FIXES_SUMMARY.md  MOBILE_SETUP.md  MOBILE_VOICE_CHAT_COMPLETE.md  OPENROUTER_CONFIG_REPORT.md  VOICE_SETUP.md  index.html
examples/: test_tools.rs
examples/notebooks/: moshi_colab.ipynb  moshi_kaggle_tailscale.ipynb
examples/python/: dispatch_agent.py  livekit_agent.py  livekit_agent_v2.py  server.py  simple_server.py  simple_voice.py  simple_voice_server.py  streaming_voice_server.py  voice_server.py
scripts/: setup-cloudflare-tunnel-no-sudo.sh  setup-cloudflare-tunnel.sh  start-all.sh  start-https-phone.sh  start-livekit-agent.sh  start-phone-https.sh  start-voice-chat.sh  start-voice-complete.sh  start-voice-phone.sh  test-voice-chat.sh  test_livekit.sh  voice.sh
src/: cli.rs  config.rs  lib.rs  main.rs  types.rs
src/agent/: compaction.rs  context_manager.rs  conversation.rs  failover.rs  interactive.rs  llm.rs  mod.rs  tool_conversation.rs  tool_loop.rs  tools.rs
src/doctor/: checks.rs  cve.rs  mod.rs  report.rs  updater.rs
src/gateway/: heartbeat.rs  mod.rs
src/hooks/: mod.rs
src/learning/: bootstrap.rs  detector.rs  mod.rs  promotion.rs  store.rs
src/memory/: daily_log.rs  embeddings.rs  mod.rs  recursive.rs  retrieval.rs  sqlite.rs
src/messaging/: mod.rs  signal.rs  slack.rs  telegram.rs
src/metrics/: analysis.rs  execution.rs  learning.rs  mod.rs
src/notifications/: mod.rs  notify.rs  push.rs
src/orchestrator/: agent_types.rs  budget.rs  bus.rs  cli.rs  context.rs  cost.rs  mod.rs  orchestrator.rs  pipeline.rs  router.rs  spawner.rs
src/security/: approval.rs  keyring.rs  mod.rs  prompt.rs  sandbox.rs  secrets.rs
src/server/: auth.rs  device.rs  http.rs  index.html  mod.rs  realtime_voice.rs  voice-chat.html  voice-livekit.html  voice_ws.rs
src/skills/: executor.rs  generator.rs  loader.rs  markdown.rs  mod.rs  registry.rs
src/skills/builtin/: database.rs  filesystem.rs  mod.rs  shell.rs  web.rs  web_browsing.rs
src/soul/: engine.rs  heartbeat.rs  mod.rs  personality.rs  proactive.rs  scheduler.rs  system_prompts.rs  watcher.rs
src/tools/: browser.rs  desktop.rs  filesystem.rs  mod.rs  remote.rs  shell.rs  web.rs
src/voice/: audio.rs  backchannel.rs  coordinator.rs  mod.rs  silero_vad.rs  stt_local.rs  synthesis.rs  tts.rs  tts_local.rs  vad.rs  whisper.rs
static/: simple-voice.html  streaming-voice.html  test-voice.html  voice-client.html
tests/: orchestrator_test.rs  test_new_features.rs  test_self_improve.rs
